   (Jacques-Henri Jourdan, review by Gabriel Scherer and Stephen Dolan)

- #8634: Statistical memory profiling provided by the Gc.Memprof
   module.
   Incomplete version: does not sample
     - objects allocated in the minor heap in native mode,
     - objects allocated by de-marshalling.
   (Jacques-Henri Jourdan, review by Stephen Dolan, Gabriel Scherer and
    Damien Doligez)

### Other libraries:

- #1939, #2023: Implement Unix.truncate and Unix.ftruncate on Windows.
  (Florent Monnier and Nicolás Ojeda Bär, review by David Allsopp)

### Build system:

- #8650: ensure that "make" variables are defined before use;
  revise generation of config/util.ml to better quote special characters
  (Xavier Leroy, review by David Allsopp)

- #8690, #8696: avoid rebuilding the world when files containing primitives
  change.
  (Stephen Dolan, review by Gabriel Scherer, Sébastien Hinderer and
   Thomas Refis)

### Bug fixes:

- #8622: Don't generate #! headers over 127 characters.
  (David Allsopp, review by Xavier Leroy and Stephen Dolan)

- #8715: minor bugfixes in CamlinternalFormat; removes the unused
  and misleading function CamlinternalFormat.string_of_formatting_gen
  (Gabriel Scherer and Florian Angeletti,
   review by Florian Angeletti and Gabriel Radanne)

- #8751: fix bug that could result in misaligned data section when compiling to
  native-code on amd64.  (observed with the mingw64 compiler)
  (Nicolás Ojeda Bär, review by David Allsopp)

OCaml 4.09.0
------------

### Code generation and optimizations:

- #2278: Remove native code generation support for 32-bit Intel macOS,
  iOS and other Darwin targets.
  (Mark Shinwell, review by Nicolas Ojeda Bar and Xavier Leroy)

- #7887: ensure frame table is 8-aligned on ARM64 and PPC64
  (Xavier Leroy, report by Mark Hayden, review by Mark Shinwell
   and Gabriel Scherer)

- #8507: Shorten symbol names of anonymous functions in Flambda mode
  (the directory portions are now hidden)