@@ -69,7 +69,25 @@ let generic_dirname is_dir_sep current_dir_name name =
   then current_dir_name
   else trailing_sep (String.length name - 1)
 
-module Unix = struct
+module type SYSDEPS = sig
+  val current_dir_name : string
+  val parent_dir_name : string
+  val dir_sep : string
+  val is_dir_sep : string -> int -> bool
+  val is_relative : string -> bool
+  val is_implicit : string -> bool
+  val check_suffix : string -> string -> bool
+  val chop_suffix_opt : suffix:string -> string -> string option
+  val temp_dir_name : string
+  val quote : string -> string
+  val quote_command :
+    string -> ?stdin: string -> ?stdout: string -> ?stderr: string
+           -> string list -> string
+  val basename : string -> string
+  val dirname : string -> string
+end
+
+module Unix : SYSDEPS = struct
   let current_dir_name = "."
   let parent_dir_name = ".."
   let dir_sep = "/"
@@ -98,11 +116,18 @@ module Unix = struct
   let temp_dir_name =
     try Sys.getenv "TMPDIR" with Not_found -> "/tmp"
   let quote = generic_quote "'\\''"
+  let quote_command cmd ?stdin ?stdout ?stderr args =
+    String.concat " " (List.map quote (cmd :: args))
+    ^ (match stdin  with None -> "" | Some f -> " <" ^ quote f)
+    ^ (match stdout with None -> "" | Some f -> " >" ^ quote f)
+    ^ (match stderr with None -> "" | Some f -> if stderr = stdout
+                                                then " 2>&1"
+                                                else " 2>" ^ quote f)
   let basename = generic_basename is_dir_sep current_dir_name
   let dirname = generic_dirname is_dir_sep current_dir_name
 end
 
-module Win32 = struct
+module Win32 : SYSDEPS = struct
   let current_dir_name = "."
   let parent_dir_name = ".."
   let dir_sep = "\\"
@@ -161,6 +186,61 @@ module Win32 = struct
     in
     loop 0;
     Buffer.contents b
+(*
+Quoting commands for execution by cmd.exe is difficult.
+1- Each argument is first quoted using the "quote" function above, to
+   protect it against the processing performed by the C runtime system,
+   then cmd.exe's special characters are escaped with '^', using
+   the "quote_cmd" function below.  For more details, see
+   https://blogs.msdn.microsoft.com/twistylittlepassagesallalike/2011/04/23
+2- The command and the redirection files, if any, must be double-quoted
+   in case they contain spaces.  This quoting is interpreted by cmd.exe,
+   not by the C runtime system, hence the "quote" function above
+   cannot be used.  The two characters we don't know how to quote
+   inside a double-quoted cmd.exe string are double-quote and percent.
+   We just fail if the command name or the redirection file names
+   contain a double quote (not allowed in Windows file names, anyway)
+   or a percent.  See function "quote_cmd_filename" below.
+3- The whole string passed to Sys.command is then enclosed in double
+   quotes, which are immediately stripped by cmd.exe.  Otherwise,
+   some of the double quotes from step 2 above can be misparsed.
+   See e.g. https://stackoverflow.com/a/9965141
+*)
+  let quote_cmd s =
+    let b = Buffer.create (String.length s + 20) in
+    String.iter
+      (fun c ->
+        match c with
+        | '(' | ')' | '!' | '^' | '%' | '\"' | '<' | '>' | '&' | '|' ->
+            Buffer.add_char b '^'; Buffer.add_char b c
+        | _ ->
+            Buffer.add_char b c)
+      s;
+    Buffer.contents b
+  let quote_cmd_filename f =
+    if String.contains f '\"' || String.contains f '%' then
+      failwith ("Filename.quote_command: bad file name " ^ f)
+    else if String.contains f ' ' then
+      "\"" ^ f ^ "\""
+    else
+      f
+  (* Redirections in cmd.exe: see https://ss64.com/nt/syntax-redirection.html
+     and https://docs.microsoft.com/en-us/previous-versions/windows/it-pro/windows-xp/bb490982(v=technet.10)
+  *)
+  let quote_command cmd ?stdin ?stdout ?stderr args =
+    String.concat "" [
+      "\"";
+      quote_cmd_filename cmd;
+      " ";
+      quote_cmd (String.concat " " (List.map quote args));
+      (match stdin  with None -> "" | Some f -> " <" ^ quote_cmd_filename f);
+      (match stdout with None -> "" | Some f -> " >" ^ quote_cmd_filename f);
+      (match stderr with None -> "" | Some f ->
+                                        if stderr = stdout
+                                        then " 2>&1"
+                                        else " 2>" ^ quote_cmd_filename f);
+      "\""
+    ]
   let has_drive s =
     let is_letter = function
       | 'A' .. 'Z' | 'a' .. 'z' -> true
@@ -180,7 +260,7 @@ module Win32 = struct
     generic_basename is_dir_sep current_dir_name path
 end
 
-module Cygwin = struct
+module Cygwin : SYSDEPS = struct
   let current_dir_name = "."
   let parent_dir_name = ".."
   let dir_sep = "/"
@@ -191,33 +271,18 @@ module Cygwin = struct
   let chop_suffix_opt = Win32.chop_suffix_opt
   let temp_dir_name = Unix.temp_dir_name
   let quote = Unix.quote
+  let quote_command = Unix.quote_command
   let basename = generic_basename is_dir_sep current_dir_name
   let dirname = generic_dirname is_dir_sep current_dir_name
 end
 
-let (current_dir_name, parent_dir_name, dir_sep, is_dir_sep,
-     is_relative, is_implicit, check_suffix, chop_suffix_opt,
-     temp_dir_name, quote, basename,
-     dirname) =
-  match Sys.os_type with
-  | "Win32" ->
-      (Win32.current_dir_name, Win32.parent_dir_name, Win32.dir_sep,
-       Win32.is_dir_sep,
-       Win32.is_relative, Win32.is_implicit, Win32.check_suffix,
-       Win32.chop_suffix_opt,
-       Win32.temp_dir_name, Win32.quote, Win32.basename, Win32.dirname)
-  | "Cygwin" ->
-      (Cygwin.current_dir_name, Cygwin.parent_dir_name, Cygwin.dir_sep,
-       Cygwin.is_dir_sep,
-       Cygwin.is_relative, Cygwin.is_implicit, Cygwin.check_suffix,
-       Cygwin.chop_suffix_opt,
-       Cygwin.temp_dir_name, Cygwin.quote, Cygwin.basename, Cygwin.dirname)
-  | _ -> (* normally "Unix" *)
-      (Unix.current_dir_name, Unix.parent_dir_name, Unix.dir_sep,
-       Unix.is_dir_sep,
-       Unix.is_relative, Unix.is_implicit, Unix.check_suffix,
-       Unix.chop_suffix_opt,
-       Unix.temp_dir_name, Unix.quote, Unix.basename, Unix.dirname)
+module Sysdeps =
+  (val (match Sys.os_type with
+       | "Win32" -> (module Win32: SYSDEPS)
+       | "Cygwin" -> (module Cygwin: SYSDEPS)
+       | _ -> (module Unix: SYSDEPS)))
+
+include Sysdeps
 
 let concat dirname filename =
   let l = String.length dirname in
